# python_webdev

./: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  shell.nix
python_webdev/: asgi.py  settings.py  urls.py  wsgi.py
python_webdev/hello_world/: urls.py  views.py
python_webdev_fastapi/: app.py
python_webdev_flask/: app.py
python_webdev_raw/: app.py
python_webdev_socketify/: app.py
